--- a/index.html
+++ b/index.html
@@ -1,43 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-<title>Telegram WebApp Proxy</title>
+<title>天天德州</title> 
 
 <style>
-html, body {
-    margin: 0;
-    padding: 0;
-    background: #000;
-    height: 100vh;
-    overflow: hidden;
-}
-iframe{
-    width:100vw;
-    height:100vh;
-    border:none;
+body{
+    margin:0;
+    background:#000;
+    color:#fff;
+    font-size:22px;
+    text-align:center;
+    padding-top:35vh;
 }
 </style>
 
 <script>
+let gameURL = "https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D";
+
 function start(){
-    if(window.Telegram && Telegram.WebApp){
+    if(window.Telegram?.WebApp){
         Telegram.WebApp.ready();
-        Telegram.WebApp.expand(); // ← 强制全屏核心
-        Telegram.WebApp.disableVerticalSwipe();
+        Telegram.WebApp.expand();             // ← 全屏
+        Telegram.WebApp.disableVerticalSwipe(); // ← 禁止下滑退出
     }
-
-    let url = new URLSearchParams(location.search).get("url");
-    if(!url){
-        document.body.innerHTML = "<h2 style='color:white;text-align:center;margin-top:40%'>❌ Missing URL<br><small>?url=xxx</small></h2>";
-        return;
-    }
-    document.body.innerHTML = `<iframe src="${url}"></iframe>`;
+    location.href = gameURL;  // ← 直接进入游戏
 }
-
-window.onload=start;
+window.onload = start;
 </script>
 </head>
-<body></body>
+
+<body>正在打开天天德州 🔥...</body> 
 </html>
