--- a/index.html
+++ b/index.html
@@ -1,35 +1,89 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
 <title>天天德州</title> 
 
+
+
 <style>
+
 body{
+
     margin:0;
+
     background:#000;
+
     color:#fff;
+
     font-size:22px;
+
     text-align:center;
-    padding-top:35vh;
+
+    display:flex;
+
+    justify-content:center;
+
+    align-items:center;
+
+    height:100vh;
+
 }
+
 </style>
 
+
+
 <script>
-let gameURL = "https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D";
+
+// 你要打开的德州URL
+
+let GAME_URL = "https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D";
+
+
 
 function start(){
-    if(window.Telegram?.WebApp){
+
+    if(window.Telegram && Telegram.WebApp){
+
         Telegram.WebApp.ready();
-        Telegram.WebApp.expand();             // ← 全屏
-        Telegram.WebApp.disableVerticalSwipe(); // ← 禁止下滑退出
+
+        Telegram.WebApp.expand();              // 全屏
+
+        Telegram.WebApp.disableVerticalSwipe(); // 禁止下滑退出
+
     }
-    location.href = gameURL;  // ← 直接进入游戏
+
+
+
+    // 1秒后自动跳到天天德州大厅 
+
+    setTimeout(()=>{ location.href = GAME_URL; }, 800);
+
 }
+
+
+
 window.onload = start;
+
 </script>
+
 </head>
 
-<body>正在打开天天德州 🔥...</body> 
+
+
+<body>
+
+⏳ 正在登录天天德州大厅... 
+
+</body>
+
 </html>
+
+C
