--- a/index.html
+++ b/index.html
@@ -1,89 +1,36 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
 <meta charset="UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<title>天天德州</title>
 
-<title>天天德州</title> 
-
-
-
+<!-- 🔥 进入页面1秒后强制跳转到德州 -->
+<meta http-equiv="refresh" content="1;url=https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D">
+    
 <style>
-
 body{
-
     margin:0;
-
     background:#000;
-
     color:#fff;
-
-    font-size:22px;
-
-    text-align:center;
-
     display:flex;
-
     justify-content:center;
-
     align-items:center;
-
     height:100vh;
-
+    font-size:24px;
 }
-
 </style>
 
-
-
 <script>
-
-// 你要打开的德州URL
-
-let GAME_URL = "https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D";
-
-
-
-function start(){
-
-    if(window.Telegram && Telegram.WebApp){
-
-        Telegram.WebApp.ready();
-
-        Telegram.WebApp.expand();              // 全屏
-
-        Telegram.WebApp.disableVerticalSwipe(); // 禁止下滑退出
-
-    }
-
-
-
-    // 1秒后自动跳到天天德州大厅 
-
-    setTimeout(()=>{ location.href = GAME_URL; }, 800);
-
+if(window.Telegram && Telegram.WebApp){
+    Telegram.WebApp.ready();
+    Telegram.WebApp.expand();
+    Telegram.WebApp.disableVerticalSwipe();
 }
-
-
-
-window.onload = start;
-
 </script>
-
 </head>
 
-
-
 <body>
-
-⏳ 正在登录天天德州大厅... 
-
+🚀 正在为你进入【天天德州】...
 </body>
-
 </html>
-
-C
