--- a/index.html
+++ b/index.html
@@ -1,58 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-<title>天天德州</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>天天德州</title>
 
-<style>
-body{
-    margin:0;
-    background:#000;
-    color:#fff;
-    font-size:20px;
-    font-family:-apple-system,Segoe UI,Roboto;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    text-align:center;
-}
-button{
-    margin-top:30px;
-    background:#ffcc00;
-    border:none;
-    padding:18px 36px;
-    font-size:22px;
-    border-radius:12px;
-    color:#000;
-    font-weight:bold;
-}
-iframe{
-    display:none; /* 允许后台打开，不阻断界面 */
-}
-</style>
+    <style>
+        html, body {
+            margin:0;
+            padding:0;
+            overflow:hidden;
+            background:#000;
+            height:100vh;
+        }
+        iframe{
+            border:none;
+            width:100vw;
+            height:100vh;
+        }
+    </style>
+
 </head>
-
 <body>
 
-<h2>🚀 正在启动天天德州...</h2>
-<p>若3秒内未自动进入，请点击下方按钮👇</p>
+    <iframe id="gameFrame"></iframe>
 
-<!-- 🔥 iFrame 后台打开 (核心突破) -->
-<iframe id="loader" src="https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D"></iframe>
+    <script>
+        const urlParam = new URLSearchParams(location.search).get("url");
 
-<!-- 🔥 强制点击进入 -->
-<button onclick="go()">进入天天德州</button>
+        // 默认跳入你的目标页面（你可以随时换）
+        const target = urlParam || "https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D";
 
-<script>
-if(window.Telegram && Telegram.WebApp){
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-    Telegram.WebApp.disableVerticalSwipe();
-}
+        document.getElementById("gameFrame").src = target;
 
-// 🔥 关键逻辑：尝试自动登录 + 可手动触发
-function go(){
-    location.hr
+        if (window.Telegram && Telegram.WebApp) {
+            Telegram.WebApp.ready();
+            Telegram.WebApp.expand(); // 强制全屏
+        }
+    </script>
+
+</body>
+</html>
