--- a/index.html
+++ b/index.html
@@ -1,34 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>WebApp Bridge</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<title>Loading...</title>
+
 <style>
-html,body{
-    margin:0;padding:0;background:#000;height:100vh;overflow:hidden;
-    display:flex;align-items:center;justify-content:center;color:white;font-size:18px;
+html, body {
+    margin: 0;
+    padding: 0;
+    width:100vw;
+    height:100vh;
+    overflow:hidden;
+    background:#000;
 }
-#loading{animation:flash 1.5s infinite;}
-@keyframes flash{0%,100%{opacity:.3}50%{opacity:1}}
+iframe {
+    width:100vw;
+    height:100vh;
+    border:none;
+}
+.loading{
+    position:fixed;top:0;left:0;width:100%;height:100%;
+    display:flex;justify-content:center;align-items:center;
+    font-size:20px;color:white;background:#000;
+}
 </style>
 </head>
+
 <body>
-<div id="loading">正在跳转，请稍候…</div>
+<div id="load" class="loading">正在载入页面...</div>
 
 <script>
-const target = "https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D";
-
-// 🔥Telegram 内运行 — 直接全屏 & 跳转
+// Telegram WebApp 全屏适配
 if (window.Telegram && Telegram.WebApp) {
     Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-    Telegram.WebApp.openLink(target, { try_instant_view: false });
-} else {
-    // 浏览器打开（PC预览）用 iframe 过桥
-    document.body.innerHTML = `<iframe src="${target}" 
-        style="border:none;width:100vw;height:100vh;"></iframe>`;
+    Telegram.WebApp.expand(); 
+    Telegram.WebApp.disableVerticalSwipe(); 
 }
+
+// ⚠ UA伪装，解决手机打不开、停在首页、跳到Vercel的问题
+Object.defineProperty(navigator,"userAgent",{get:()=> 
+"Mozilla/5.0 (iPhone; CPU iPhone OS 14_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1"
+});
+
+// 你的最终目标落地页 (📌 我已替你写死，不再传参)
+let target = "https://appcfp.wpoker.io/?context=eyJ0cmliZUlkIjoiIiwiY2x1YiI6MTAwMDAwMTU0Nn0%3D";
+
+// ★ 自动全屏载入
+let iframe = document.createElement("iframe");
+iframe.src = target;
+document.body.appendChild(iframe);
+document.getElementById("load").remove();
 </script>
 </body>
 </html>
